Bug 987545 - The device support microphone is headset instead of headphone. r=mwu